--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header class="header_wrapper">
+    <i class="pi pi-box"></i>
+    <h1>Stora</h1>
+</header>
+<div class="card">
+    <p-tabMenu [model]="items" />
+</div>
