Connect firestore with app

--- a/src/app/components/shared/add-storage-dialog/add-storage-dialog.component.html
+++ b/src/app/components/shared/add-storage-dialog/add-storage-dialog.component.html
@@ -6,13 +6,13 @@
 >
     <div class="p-fluid">
         <p-inputGroup class="p-field">
-            <label for="name">Name</label>
+            <label for="name">Location</label>
             <input
                 id="name"
                 type="text"
                 pInputText
                 [(ngModel)]="storage"
-                placeholder="Name Store"
+                placeholder="Location Name"
             />
         </p-inputGroup>
     </div>
