--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -19,5 +19,17 @@
         padding: 2rem;
         border: 2px solid rgb(0, 162, 255);
         border-radius: 10px;
+
+        p-floatLabel {
+            width: 100%;
+            input {
+                width: 100%;
+            }
+        }
+    }
+    
+    .cta-btn {
+        display: flex;
+        gap: 0.5rem;
     }
 }
